<resources>
    <string name="app_name">Got an idea?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="starting_string_alarm">Premi il bottone in basso per iniziare a creare la tua prima sveglia!</string>
    <string name="starting_string_note">Premi il bottone in basso per iniziare a creare la tua prima nota!</string>
    <string name="menu_alarm">Sveglie</string>
    <string name="menu_note">Note</string>
    <string name="event_save_alarm">Sveglia salvata</string>
    <string name="event_cancel_alarm">Sveglia annullata</string>
    <string name="event_delete_alarm">Sveglia eliminata</string>
    <string name="deleted_all_alarms">Tutte le sveglie sono state eliminate</string>
    <string name="title_label">Titolo</string>
    <string name="alarm_time_label">Ora</string>
    <string name="vibrator_label">Vibrazione</string>
    <string name="on_label">On</string>
    <string name="off_label">Off</string>
    <string name="event_delete_all_alarms">Elimina tutte le sveglie</string>
    <string name="ringtone_label">Suoneria</string>
    <string name="imageview_state_alarm_description">Immagine per attivare o disattivare una sveglia</string>
    <string name="alarm_repetition_label">Ripetizione</string>
    <string name="no_repetition_option_selected">Nessuna opzione</string>
    <string name="repetition_label">Ripetizione</string>
    <string name="details_label">Dettagli</string>
    <string name="insert_title">Inserisci un titolo</string>
    <string name="choose_repetition">Scegli una ripetizione</string>
    <string name="event_edit_alarm">Sveglia modificata</string>
    <string name="impossible_edit_alarm">La sveglia non può essere modificata</string>
    <string name="add_alarm">Aggiungi una sveglia</string>
    <string name="cancel_alarm">Annulla sveglia</string>
    <string name="edit_alarm">Modifica sveglia</string>
    <string name="cancel_edit_alarm">Annulla modifica</string>
    <string name="message_cancel_alarm">Sei sicuro di voler annullare questa sveglia?</string>
    <string name="message_cancel_edit_alarm">Sei sicuro di voler annullare questa modifica?</string>
    <string name="yes_label">SI</string>
    <string name="no_label">NO</string>
    <string name="cancel_edit_alarm_toast">Modifica annullata</string>
    <string name="select_option">Scegli un\'opzione</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">ANNULLA</string>
    <string name="delete_alarms">Elimina sveglie</string>
    <string name="message_delete_all_alarms">Sei sicuro di voler eliminare tutte le sveglie?</string>
    <string name="no_alarms_to_delete">Nessuna sveglia da eliminare</string>
    <string name="active_alarm">Sveglia riattivata</string>
    <string name="inactive_alarm">Sveglia disattivata</string>
    <string name="delete_alarm">Elimina sveglia</string>
    <string name="message_delete_alarm">Sei sicuro di voler eliminare questa sveglia?</string>
    <string name="imageview_ringtone_description">Immagine che descrive se la suoneria è attiva</string>
    <string name="imageview_vibration_description">Immagine che descrive se la vibrazione è attiva</string>
    <string name="imageview_ringtone_description_activity_add_alarm">Immagine che rappresenta l\'icona della suoneria</string>
    <string name="imageview_vibration_description_activity_add_alarm">Immagine che rappresenta l\'icona della vibrazione</string>
    <string name="imageview_repetition_description_activity_add_alarm">Immagine che rappresenta l\'icona della ripetizione</string>
    <string name="imageview_arrow_description_activity_add_alarm">Immagine che rappresenta l\'icona della freccetta per il tipo di ripetizione</string>
    <string name="description_hint">Inserisci la descrizione</string>
    <string name="event_save_note">Nota salvata</string>
    <string name="event_delete_all_notes">Elimina tutte le note</string>
    <string name="add_note">Aggiungi una nota</string>
    <string name="cancel_note">Annulla nota</string>
    <string name="edit_note">Modifica nota</string>
    <string name="cancel_edit_note">Annulla modifica</string>
    <string name="message_cancel_note">Sei sicuro di voler annullare questa nota?</string>
    <string name="message_cancel_edit_note">Sei sicuro di voler annullare questa modifica?</string>
    <string name="event_cancel_note">Nota annullata</string>
    <string name="event_delete_note">Nota eliminata</string>
    <string name="cancel_edit_note_toast">Modifica annullata</string>
    <string name="insert_title_and_description_note">Inserisci un titolo e una descrizione</string>
    <string name="delete_notes">Elimina note</string>
    <string name="message_delete_all_notes">Sei sicuro di voler eliminare tutte le note?</string>
    <string name="deleted_all_notes">Tutte le note sono state eliminate</string>
    <string name="no_notes_to_delete">Nessuna nota da eliminare</string>
    <string name="delete_note">Elimina nota</string>
    <string name="message_delete_note">Sei sicuro di voler eliminare questa nota?</string>
    <string name="impossible_edit_note">La nota non può essere modificata</string>
    <string name="event_edit_note">Nota modificata</string>
    <string name="impossible_add_alarm">Impossibile creare la sveglia</string>
    <string name="impossible_add_note">Impossibile creare la nota</string>
    <string-array name="repetition_options" >
        <item>Una sola volta</item>
        <item>Giornalmente</item>
        <item>Giorni della settimana</item>
    </string-array>
    <string-array name="repetition_options_days" >
        <item>Lunedì</item>
        <item>Martedì</item>
        <item>Mercoledì</item>
        <item>Giovedì</item>
        <item>Venerdì</item>
        <item>Sabato</item>
        <item>Domenica</item>
    </string-array>
    <string-array name="repetition_options_days_short" >
        <item>Lun</item>
        <item>Mar</item>
        <item>Mer</item>
        <item>Gio</item>
        <item>Ven</item>
        <item>Sab</item>
        <item>Dom</item>
    </string-array>
</resources>
